# claude-code-venv

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
e2e/tests/: conftest.py  test_cli.py  test_environments.py  test_shell.py  types.py
src/: cli.rs  config.rs  daemon.rs  env.rs  main.rs  shell.rs
src/proxyd/: cli.rs  config.rs  mod.rs  models.rs  proxy.rs
