[package]
name = "claude-code-venv"
version = "0.1.0-alpha1"
edition = "2024"

[[bin]]
name = "ccv"
path = "src/main.rs"

[[bin]]
name = "ccv-d"
path = "src/daemon.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.11"
colored = "2.1"
anyhow = "1.0"
dirs = "5.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
headers = "0.3"
futures = "0.3"
