[project]
name = "claude-code-e2e"
version = "0.1.0"
description = "End-to-end tests for Claude Code"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pyyaml>=6.0",
    "pyfakefs>=5.2.0",
    "toml>=0.10.2",
    "pexpect>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
timeout = 30
